# AGIeX

./: .gitignore  README.md  index.html  package-lock.json  package.json  start.sh  vercel.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: leaderboard.yml  unit-tests.yml
dashboard/: index.html
docs/: NODE_REWARDS.md  README.md  adding-a-research-domain.md  aggregated-intelligence.md  whitepaper.html
program/: .gitignore  Anchor.toml  Cargo.toml  README.md
program/.devcontainer/: Dockerfile  devcontainer.json
program/programs/agi-rewards/: Cargo.toml
program/programs/agi-rewards/src/: constants.rs  contexts.rs  errors.rs  helpers.rs  lib.rs  state.rs
projects/academic-papers/: LEADERBOARD.md
projects/agentic-coding/: LEADERBOARD.md
projects/astrophysics/: LEADERBOARD.md
projects/financial-analysis/: LEADERBOARD.md
projects/general-intelligence/: LEADERBOARD.md  README.md
projects/gpt2-tinystories/: LEADERBOARD.md
projects/p2p-network/: LEADERBOARD.md
projects/search-engine/: LEADERBOARD.md
projects/skills-and-tools/: LEADERBOARD.md
public/: install.sh
scripts/: download-model.js  unstake.sh  watch-intelligence.js
setup/: detect-hardware.sh  node-config.template.json
src/: README.md  identity.js  main.js
src/brain/: agent.js
tests/: brain.test.js  capabilities.test.js  governance.test.js  identity.test.js  inference-server.test.js  integration.test.js  leaderboard.test.js  p2p-node.test.js  pipeline.test.js  pulse-verification.test.js  security.test.js
tokens/: .gitignore  package.json  rewards.js
(+13 files in other folders)
