[package]
name = "agi-rewards"
version = "0.1.0"
description = "Trustless on-chain reward minting for the AGI agent network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agi_rewards"
doctest = false

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
blake3 = ">=1.5, <1.8"
